--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@rmlio/yarrrml-parser": "^1.6.1",
     "@treecg/types": "^0.4.5",
     "n3": "^1.17.2",
-    "rdf-lens": "^0.0.4"
+    "rdf-lens": "^0.0.4",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@ajuvercr/js-runner": "^0.1.12",
